--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,6 +29,5 @@
       "src/*": ["./src/*"]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
