--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.11",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.12.0",
     "konsta": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
