--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.11",
+    "@telegram-apps/sdk-react": "^2.0.23",
+    "@telegram-apps/telegram-ui": "^2.1.8",
     "clsx": "^2.1.1",
+    "eruda": "^3.4.1",
     "konsta": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,7 +23,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
     "recharts": "^2.15.0",
-    "yup": "^1.6.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
